[package]
name = "merkle-patricia-trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hex = "0.4.3"
rust-crypto = "0.2.36"
"trie" = {path="./trie"}
tokio = { version = "1", features = ["full"] }